# fshare

./: README.md  bun.lockb  package.json
.github/workflows/: release.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backend.rs  main.rs
src/components/: SelectFile.vue
src/plugins/: vuetify.js
