[package]
name = "fshare"
version = "0.0.2"
description = "A File Sharing App"
authors = ["zander"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-all", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["macros"] }
local-ip-address = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1.0"
portpicker = "0.1"
tower-http = { version = "0.5", features = ["cors"] }
http = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
